travis: use matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,37 @@
 language: cpp
 sudo: required
-dist: bionic
-compiler:
-- gcc
-os:
-- linux
-- windows
+
+matrix:
+    include:
+# Linux Build
+        - os: linux
+          compiler: g++
+          dist: bionic
+          env: CXX_TOOLS=g++
+
+# Cross-compile Build for Linux via mingw64
+        - os: linux
+          compiler: x86_64-w64-mingw32-g++
+          env: CXX_TOOLS=x86_64-w64-mingw32-g++
+          dist: trusty
+          addons:
+              apt:
+              packages:
+                  - gcc-mingw-w64-base
+                  - binutils-mingw-w64-x86-64
+                  - gcc-mingw-w64-x86-64
+                  - gcc-mingw-w64
+                  - g++-mingw-w64-x86-64
+
+# Build for macOS via GCC
+        - os: osx
+          osx_image: xcode8
+          env:
+            - MATRIX_EVAL="brew install gcc && CC_TOOLS=gcc-7 && CXX_TOOLS=g++-7"
 
 before_install:
-- |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        [[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64
-        choco uninstall -y mingw
-        choco upgrade --no-progress -y msys2
-        export msys2='cmd //C RefreshEnv.cmd '
-        export msys2+='& set MSYS=winsymlinks:nativestrict '
-        export msys2+='& C:\\tools\\msys64\\msys2_shell.cmd -defterm -no-start'
-        export mingw64="$msys2 -mingw64 -full-path -here -c "\"\$@"\" --"
-        export msys2+=" -msys2 -c "\"\$@"\" --"
-        $msys2 pacman --sync --noconfirm --needed mingw-w64-x86_64-toolchain
-        ## Install more MSYS2 packages from https://packages.msys2.org/base here
-        taskkill //IM gpg-agent.exe //F  # https://travis-ci.community/t/4967
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
-        export MAKE=mingw32-make  # so that Autotools can find it
-        ;;
-    esac
-
-before_cache:
-- |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        # https://unix.stackexchange.com/a/137322/107554
-        $msys2 pacman --sync --clean --noconfirm
-        ;;
-    esac
-
-cache:
-    directories:
-    - $HOME/AppData/Local/Temp/chocolatey
-    - /C/tools/msys64
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then eval "${MATRIX_EVAL}" ; fi
 
 script:
-- if [ $TRAVIS_OS_NAME == linux ]; then ./build.sh; fi
-- if [ $TRAVIS_OS_NAME == windows ]; then ./build.bat; fi
+    - "./tools/compile_travis.sh"
+
