travis: add deployment and try to fix osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: cpp
-sudo: required
 
 matrix:
     include:
@@ -7,31 +6,30 @@ matrix:
         - os: linux
           compiler: g++
           dist: bionic
-          env: CXX_TOOLS=g++
+          env: CXX_TOOLS=g++ BUILD_FOR=Linux
 
 # Cross-compile Build for Linux via mingw64
         - os: linux
           compiler: x86_64-w64-mingw32-g++
-          env: CXX_TOOLS=x86_64-w64-mingw32-g++
+          env: CXX_TOOLS=x86_64-w64-mingw32-g++ BUILD_FOR=Windows
           dist: bionic
           addons:
-              apt:
-              packages:
-                  - gcc-mingw-w64-base
-                  - binutils-mingw-w64-x86-64
-                  - gcc-mingw-w64-x86-64
-                  - gcc-mingw-w64
-                  - g++-mingw-w64-x86-64
+                apt:
+                    packages:
+                        - gcc-mingw-w64-base
+                        - binutils-mingw-w64-x86-64
+                        - gcc-mingw-w64-x86-64
+                        - gcc-mingw-w64
+                        - g++-mingw-w64-x86-64
 
-# Build for macOS via GCC
+# Build for macOS via clang
         - os: osx
           osx_image: xcode8
-          env:
-            - MATRIX_EVAL="brew install gcc && CC_TOOLS=gcc-7 && CXX_TOOLS=g++-7"
-
-before_install:
-    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then eval "${MATRIX_EVAL}" ; fi
+          env: CXX_TOOLS=clang BUILD_FOR=OSX
 
 script:
     - "./tools/compile_travis.sh"
 
+deploy:
+    - provider: script
+      script: ./tools/upload_build.sh
