[travis] allow macOS build again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 
-matrix:
+jobs:
     include:
 # Linux Build
         - os: linux
@@ -22,7 +22,6 @@ matrix:
                         - gcc-mingw-w64
                         - g++-mingw-w64-x86-64
 
-    allow_failures:
 # Build for macOS via clang
         - os: osx
           osx_image: xcode8
